# NJU-PETs-PPlus

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
app/: Application.cpp  Application.h  main.cpp
business/: NLPService.cpp  NLPService.h  PetStateManager.cpp  PetStateManager.h  ReminderService.cpp  ReminderService.h  ScheduleService.cpp  ScheduleService.h  SoundEffectService.cpp  SoundEffectService.h
data/: AppConfig.cpp  AppConfig.h  DatabaseManager.cpp  DatabaseManager.h  ScheduleRepository.cpp  ScheduleRepository.h
data/models/: PetProfile.h  Schedule.h
presentation/calendar/: CalendarPanel.cpp  CalendarPanel.h  MiniCalendar.cpp  MiniCalendar.h  ScheduleEditPanel.cpp  ScheduleEditPanel.h  TimelineView.cpp  TimelineView.h
presentation/common/: Theme.h
presentation/mainmenu/: MainMenu.cpp  MainMenu.h
presentation/other/: OtherPanel.cpp  OtherPanel.h
presentation/pet/: Animator.cpp  Animator.h  BubbleWidget.cpp  BubbleWidget.h  PetWidget.cpp  PetWidget.h  RadialMenu.cpp  RadialMenu.h  SkinManifest.cpp  SkinManifest.h
presentation/selector/: PetSelector.cpp  PetSelector.h
presentation/settings/: SettingsPanel.cpp  SettingsPanel.h
resources/: resources.qrc
resources/sprites/Muelsyse/: pet.json
resources/sprites/Pramanix/: pet.json
resources/sprites/snow/: pet.json
tools/: gen_sprites.py
tools/mp4-edit-tool/: .gitignore  01_extract_frames.py  02_pixelate.py  03_remove_bg.py  04_make_spritesheet.py  README.md  config.py  requirements.txt  resample_sleep.py  run_all.py  stitch_sleep.py
